@@ -1,5 +1,9 @@
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
 
+	* gnome-modules.xml.in: string-freeze gnome-2-16 and gnome-2-14.
+
+2007-01-02  Danilo Šegan  <danilo@gnome.org>
+
 	* templates/language-release-doc-stats-modules.tmpl: Don't list non-existing templates.
 
 	* gnome-modules.xml.in:
